Get rid of google dependency